优化代码